[tool.poetry]
name = "arbp"
version = "0.1.0"
description = ""
authors = ["Noah"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pillow = "^10.0.0"
djangorestframework = "^3.14.0"
common = "^0.1.2"
pyjwt = "^2.8.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
